--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^31.1.0",
+    "@ckeditor/ckeditor5-upload": "^31.1.0",
+    "@ckeditor/ckeditor5-vue": "^2.0.1",
+    "@popperjs/core": "^2.11.0",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "^4.5.15",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
