--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VUE_APP_AHIHI=nksjdvkjsd
-VUE_APP_URL=http://localhost:3002/api
-VUE_APP_LOCAL=https://news-dacn.herokuapp.com/api
+VUE_APP_URL=https://news-dacn.herokuapp.com/api
+VUE_APP_LOCAL=http://localhost:3002/api
